--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asn1crypto==0.24.0
 attrs==19.1.0
 awscli==1.16.214
 backcall==0.1.0
@@ -8,13 +9,16 @@ boto3==1.9.204
 botocore==1.12.204
 bs4==0.0.1
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
 colorama==0.3.9
+cryptography==2.7
 decorator==4.4.0
 defusedxml==0.6.0
 Django==2.2.4
 django-core==1.4.1
 django-extensions==2.2.1
+django-rest-knox==4.1.0
 django-storages==1.7.1
 djangorestframework==3.10.2
 docutils==0.14
@@ -47,6 +51,7 @@ Pillow==6.1.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
 pyasn1==0.4.6
+pycparser==2.19
 Pygments==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
