--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ jupyter-console==6.0.0
 jupyter-core==4.5.0
 MarkupSafe==1.1.1
 mistune==0.8.4
-mysqlclient==1.4.2.post1
+# mysqlclient==1.4.2.post1
 nbconvert==5.6.0
 nbformat==4.4.0
 notebook==6.0.0
